--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ subprojects {
 
     apply plugin: 'groovy'
 
-    sourceCompatibility = 1.8
+    sourceCompatibility = 11
 
     repositories {
         mavenLocal()
@@ -18,6 +18,7 @@ subprojects {
     dependencies {
 
         compile 'org.codehaus.groovy:groovy-all:2.5.6'
+        compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
 
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
